playground/heimdall/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: heimdall
  labels:
    app: heimdall
spec:
  ports:
    - name: heimdall-http
      port: 80
      protocol: TCP
    - name: heimdall-https
      port: 443
      protocol: TCP
  selector:
    app: heimdall
