playground/heimdall/heimdall.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall-deployment
  labels:
    app: heimdall
spec:
  selector:
    matchLabels:
      app: heimdall
  strategy: 
    type: Recreate
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      securityContext:
        runAsUser: 0
      containers:
      - image: linuxserver/heimdall
        imagePullPolicy: Always
        name: heimdall-container
        ports:
        - containerPort: 80
        - containerPort: 443
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        volumeMounts:
        - mountPath: /config
          name: heimdall-config
      volumes:
      - name: heimdall-config
        persistentVolumeClaim:
          claimName: heimdall-config
---
apiVersion: v1
kind: Service
metadata:
  name: heimdall
  labels:
    app: heimdall
spec:
  ports:
    - name: heimdall-http
      port: 80
      protocol: TCP
    - name: heimdall-https
      port: 443
      protocol: TCP
  selector:
    app: heimdall
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: heimdall
spec:
  rules:
  - host: dashboard.playerof.games
    http:
     paths:
     - path: /
       backend:
        serviceName: heimdall
        servicePort: heimdall-http
