playground/heimdall/ingress.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: heimdall
spec:
  rules:
  - host: dashboard.playerof.games
    http:
     paths:
     - path: /
       backend:
        serviceName: heimdall
        servicePort: heimdall-http
